--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "lucid-sight-challenge",
+  "proxy": "https://www.metaweather.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +11,14 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "axios": "^0.26.1",
+    "cors-anywhere": "^0.4.4",
+    "material-icons-react": "^1.0.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.5.5",
+    "sass": "^1.50.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
